# routes/brands.php
@@ -3,7 +3,9 @@
 use App\Http\Controllers\BrandController;
 use Illuminate\Support\Facades\Route;
 
-Route::post('/brands', [BrandController::class, 'store']);
-Route::get('/brands', [BrandController::class, 'index']);
-Route::get('/brands/{id}', [BrandController::class, 'show']);
-Route::put('/brands/{id}', [BrandController::class, 'update']);
+Route::middleware('jwt.auth')->group(function () {
+    Route::post('/brands', [BrandController::class, 'store']);
+    Route::get('/brands', [BrandController::class, 'index']);
+    Route::get('/brands/{id}', [BrandController::class, 'show']);
+    Route::put('/brands/{id}', [BrandController::class, 'update']);
+});
