# routes/departments.php
@@ -3,7 +3,9 @@
 use App\Http\Controllers\DepartmentController;
 use Illuminate\Support\Facades\Route;
 
-Route::post('/departments', [DepartmentController::class, 'store']);
-Route::get('/departments', [DepartmentController::class, 'index']);
-Route::get('/departments/{id}', [DepartmentController::class, 'show']);
-Route::put('/departments/{id}', [DepartmentController::class, 'update']);
+Route::middleware('jwt.auth')->group(function () {
+    Route::post('/departments', [DepartmentController::class, 'store']);
+    Route::get('/departments', [DepartmentController::class, 'index']);
+    Route::get('/departments/{id}', [DepartmentController::class, 'show']);
+    Route::put('/departments/{id}', [DepartmentController::class, 'update']);
+});
